# snowflake-ml-system-sandbox

./: .gitignore  Makefile  README.md  pyproject.toml  sandbox.ipynb
.github/workflows/: pr-checks.yml
config/: config.yml
src/: __init__.py  config.yml  setup.py  sproc_training.py  utils.py
src/adhoc/: create_score_table.sql  prepare_dataset.py
src/data/: dataset.py  loader.py  preprocessing.py  source.py
src/dwh/: snowflake.py
src/evaluation/: metrics.py
src/ml/: evaluation.py  preprocessing.py  training.py
src/models/: pipeline.py  predictor.py  rollback.py  trainer.py
src/pipelines/: sproc_dataset.py  sproc_offline_testing.py  sproc_prediction.py  sproc_training.py
src/streamlit/sample_app/: app.py  environment.yml  snowflake.yml
src/tasks/: task_dataset.py  task_offline_testing.py  task_prediction.py  task_training.py
src/utils/: config.py  constants.py  logger.py  snowflake.py
tests/: test_sample.py
tests/data/: test_dataset.py  test_loader.py  test_preprocessing.py
tests/dwh/: test_snowflake.py
tests/evaluation/: test_metrics.py
tests/models/: test_pipeline.py  test_predictor.py  test_rollback.py  test_trainer.py
tests/pipelines/: test_sproc_offline_testing.py  test_sproc_prediction.py  test_sproc_training.py
tests/utils/: test_snowflake.py
