[tool.poetry]
name = "snowflake-machine-learning-system"
version = "0.1.0"
description = ""
authors = ["dmaruyama-51 <0501awasuram@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
snowflake-snowpark-python = {extras = ["pandas"], version = "^1.25.0"}
pytest-mock = "^3.14.0"
ucimlrepo = "^0.0.7"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
mypy = "^1.13.0"
ipykernel = "^6.29.5"
certifi = "^2024.8.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["src/adhoc/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[[tool.mypy.overrides]]
module = ["yaml.*"]
ignore_missing_imports = true
